Completely remove lombok from project